<?xml version="1.0"?>
<package format="2">
    <name>rc_config</name>
    <version>0.0.0</version>
    <description>The rc_config package</description>
    <maintainer email="myx@todo.todo">myx</maintainer>
    <license>BSD</license>
  
    <buildtool_depend>catkin</buildtool_depend>
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
